src/test/ui/consts/single_variant_match_ice.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/single_variant_match_ice.rs:5:24
   |
LL | const FOO: u32 = match Foo::Prob {
   |                        ^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/single_variant_match_ice.rs:9:24
   |
LL | const BAR: u32 = match Foo::Prob {
   |                        ^^^^^^^^^

error[E0723]: loops and conditional expressions are not stable in const fn
  --> $DIR/single_variant_match_ice.rs:17:15
   |
LL |         match *self {
   |               ^^^^^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add #![feature(const_fn)] to the crate attributes to enable

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0019, E0723.
For more information about an error, try `rustc --explain E0019`.
